--- a/addTask.html
+++ b/addTask.html
@@ -26,20 +26,20 @@
                 <form class="add_task_form">
                     <div class="add_task_left_side">
                         <label for="title">Title</label>
-                        <input name="title" required placeholder="Enter a title" type="text">
+                        <input id="title" name="title" required placeholder="Enter a title" type="text">
                         <label for="description">Description</label>
                         <textarea placeholder="Enter a description" name="description" id="description"></textarea>
                         <label for="due_Date">Due Date</label>
-                        <input name="due_Date" required placeholder="dd/mm/yyyy" type="date">
+                        <input id="date" name="due_Date" required placeholder="dd/mm/yyyy" type="date">
 
                     </div>
                     <div class="add_task_seperator"></div>
                     <div class="add_task_left_side">
-                        <span>Prio</span>
-                        <div>
-                            <button>Urgent</button>
-                            <button>Medium</button>
-                            <button>Low</button>
+                        <label for="">Prio</label>
+                        <div class="prio_btn_container">
+                            <span class="prio_btn" onclick="selectedPrio('urgent')">Urgent</span>
+                            <span class="prio_btn" onclick="selectedPrio('medium')">Medium</span>
+                            <span class="prio_btn" onclick="selectedPrio('low')">Low</span>
                         </div>
                         <label for="assigned_to">Assigned to</label>
                         <select id="assigned_to" name="assigned_to">
@@ -47,7 +47,7 @@
 
                         </select>
                         <label for="category">Category</label>
-                        <select required id="category" name="category">
+                        <select id="category" onchange="selectedCategory()" required id="category" name="category">
                             <option disabled selected hidden value="select_category">Select task category</option>
                             <option value="technical_task">Technical Task</option>
                             <option value="user_story">User Story</option>
@@ -58,6 +58,7 @@
                             <span onclick="addSubtask()" class="add">+</span>
                         </div>
                         <div id="subtask"></div>
+                        <button>Add Task</button>
                     </div>
                 </form>
             </div>
