--- a/sign_up.html
+++ b/sign_up.html
@@ -38,7 +38,7 @@
                 <input id="confirm_password" required placeholder="confirm Password" type="password">
                 <input onclick="showConfirmPassword()" class="checkbox_second" placeholder="" type="checkbox">
             </div>
-            <span id="warning" class="warning d_none">Wrong E-Mail or Password. Please check your Log in information's!</span>
+            <span id="warning" class="warning d_none">Password is not matching, please check!</span>
             <button id="register_button">Sign Up</button>
             <div id="success_registration" class="success_registration d_none">Du hast dich erfolgreich Registriert <br>
                 Du wirst automatisch weiter geleitet</div>
