upadte addTask subtask input

--- a/addTask.html
+++ b/addTask.html
@@ -53,7 +53,7 @@
                         </select>
                         <label for="subtask">Add new subtask</label>
                         <div class="subtask_container">
-                            <input id="subtask_input" name="subtask" placeholder="Add new subtask" type="text">
+                            <input maxlength="15" id="subtask_input" name="subtask" placeholder="Add new subtask" type="text">
                             <span onclick="addSubtask()" class="add">+</span>
                         </div>
                         <ul id="subtask"></ul>
