drag and drop tasks

--- a/board.html
+++ b/board.html
@@ -25,26 +25,22 @@
                 <div class="board_content">
                     <div class="tasks-container">
                         <h2>To do </h2>
-                        <div id="to-do" class="tasks_content" ondrop="moveTo('toDo')"
-                            ondragover="dragoverHandler(event)">
+                        <div id="to-do" class="tasks_content" ondrop="moveTo('toDo')"ondragover="dragoverHandler(event)">
                         </div>
                     </div>
                     <div class="tasks-container">
                         <h2>In progress</h2>
-                        <div id="in-progress" class="tasks_content" ondrop="moveTo('inProgress')"
-                            ondragover="dragoverHandler(event)">
+                        <div id="in-progress" class="tasks_content" ondrop="moveTo('inProgress')"ondragover="dragoverHandler(event)">
                         </div>
                     </div>
                     <div class="tasks-container">
                         <h2>Await feedback</h2>
-                        <div id="await" class="tasks_content" ondrop="moveTo('await')"
-                            ondragover="dragoverHandler(event)">
+                        <div id="await" class="tasks_content" ondrop="moveTo('await')"ondragover="dragoverHandler(event)">
                         </div>
                     </div>
                     <div class="tasks-container">
                         <h2>Done</h2>
-                        <div id="done" class="tasks_content" ondrop="moveTo('done')"
-                            ondragover="dragoverHandler(event)">
+                        <div id="done" class="tasks_content" ondrop="moveTo('done')"ondragover="dragoverHandler(event)">
                         </div>
                     </div>
                 </div>
