--- a/summary.html
+++ b/summary.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/standard.css">
     <script src="./script.js"></script>
+    <script src="./scripts/board.js"></script>
     <script src="./scripts/data.js"></script>
     <script src="./scripts/summary.js"></script>
     <script src="./templates/header.js"></script>
