--- a/addTask.html
+++ b/addTask.html
@@ -30,7 +30,7 @@
                         <label for="description">Description</label>
                         <textarea placeholder="Enter a description" name="description" id="description"></textarea>
                         <label for="date">Due Date</label>
-                        <input onchange="selectedDate()" id="date" name="due_Date" required placeholder="dd/mm/yyyy" type="date">
+                        <input type="date" onchange="selectedDate()" id="date" name="due_Date" required placeholder="dd/mm/yyyy" >
                     </div>
                     <div class="add_task_seperator"></div>
                     <div class="add_task_left_side">
