change HTML5 to custome category at addTask

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -87,18 +87,18 @@
                             <div class="memberForTask" id="memberForTask"></div>
                         </div>
                     </div>
-                    <article class="flex-column">
-                        <label>Category<span>*</span></label>
+                    <article class="flex-column subtask-main-container">
+                        <p>Category<span>*</span></p>
                         <div class="subtask-container category-container" id="category">
                             Select Task Category
                             <div class="dropdown-img-container">
                                 <img class="category-img" id="dropwdown-icon" src="../assets/icons/dropdown-closed.png" alt="">
                             </div>
                         </div>
-                        <div class="">
-                            <ul>>Technical Task</ul>
-                            <ul>>User Story</ul>
-                        </div>
+                        <ul class="category-list">
+                            <li>Technical Task</li>
+                            <li>User Story</li>
+                        </ul>
                         <div class="warning-container">
                             <span class="warning d_none" id="warning-category">This field is required</span>
                         </div>
