add flatpicker to baord

--- a/html/board.html
+++ b/html/board.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>board</title>
+    <link rel="stylesheet" href="../node_modules/flatpickr/dist/flatpickr.min.css" />
     <link rel="shortcut icon" href="../assets/icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
@@ -27,6 +28,8 @@
     <script src="../js/editTask.js"></script>
     <script src="../js/editTask_v2.js"></script>
     <script src="../assets/templates/add_task_template.js"></script>
+    <script src="../node_modules/flatpickr/dist/flatpickr.min.js"></script>
+    <script src="../node_modules/flatpickr/dist/l10n/de.js"></script>
 </head>
 
 <body id="body" onresize="toogleVieW(),highlightLink(), toggleAddTaskLink(), toggleOverlayTask()" onload="initboard()">
