--- a/html/add_task.html
+++ b/html/add_task.html
@@ -51,7 +51,7 @@
                         <p>Due date<span>*</span></p>
                         <div class="date-container">
                             <input onfocusout="checkDate()" type="text" class="input-text date-input activeDate"
-                                id="datepicker" placeholder="dd/mm/yyyy" autocomplete="off" min="">
+                                id="datepicker" placeholder="dd/mm/yyyy" autocomplete="off">
                             <div id="calender-icon-trigger" class="calender-icon-container">
                                 <img src="../assets/icons/calender.png" alt="calender-icon">
                             </div>
